--- a/config/database.yml
+++ b/config/database.yml
@@ -17,5 +17,5 @@ test:
 production:
   <<: *default
   database: baukis2_production
-  username: baukis2
+  username: postgres
   password: <%= ENV['BAUKIS2_DATABASE_PASSWORD'] %>
